--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ warn_unused_configs = True
 check_untyped_defs = True
 disallow_untyped_defs = True
 [tool:pytest]
-addopts = -p no:playwright
+addopts = -p no:playwright --runpytest subprocess
 testpaths =
     tests
 [coverage:run]
