feat: added browser channel argument (#47)
Co-authored-by: Max Schmitt <max@schmitt.mx>

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ warn_unused_configs = True
 check_untyped_defs = True
 disallow_untyped_defs = True
 [tool:pytest]
-addopts = -p no:playwright --runpytest subprocess
+addopts = -p no:playwright --runpytest subprocess -vv
 testpaths =
     tests
 [coverage:run]
