--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,14 +9,15 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
 -   repo: https://github.com/psf/black
-    rev: 21.5b2
+    rev: 21.9b0
     hooks:
     -   id: black
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.812
+    rev: v0.910-1
     hooks:
     -   id: mypy
--   repo: https://gitlab.com/pycqa/flake8
-    rev: '3.9.2'
+        additional_dependencies: [types-python-slugify==5.0.0]
+-   repo: https://github.com/pycqa/flake8
+    rev: 3.9.2
     hooks:
-    -   id: flake8
+      - id: flake8
