--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,20 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r local-requirements.txt
+    - name: Lint
+      run: pre-commit run --show-diff-on-failure --color=always --all-files
   build:
     timeout-minutes: 30
     strategy:
@@ -26,8 +40,6 @@ jobs:
         pip install -e .
         python -m playwright install
         python -m playwright install-deps
-    - name: Lint
-      uses: pre-commit/action@v2.0.0
     - name: Test
       if: ${{ matrix.os != 'ubuntu-latest' }}
       run: pytest --cov=pytest_playwright --cov-report xml
